--- a/ScraperScrap.ipynb
+++ b/ScraperScrap.ipynb
@@ -31,26 +31,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Table('games', MetaData(bind=None), Column('id', Integer(), table=<games>, primary_key=True, nullable=False), Column('name', String(), table=<games>), Column('description', String(), table=<games>), Column('published', Integer(), table=<games>), Column('minplayers', Integer(), table=<games>), Column('maxplayers', Integer(), table=<games>), Column('suggested_numplayers', Integer(), table=<games>), Column('playingtime', Integer(), table=<games>), Column('minplaytime', Integer(), table=<games>), Column('maxplaytime', Integer(), table=<games>), Column('minage', Integer(), table=<games>), Column('suggested_playerage', Integer(), table=<games>), Column('language_dependence', Boolean(), table=<games>), Column('designer', String(), table=<games>), schema=None)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Game.__table__"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -59,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,11 +48,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "req=requests.get(base+'=1&type=boardgame,boardgameexpansion')"
+    "req=requests.get(base+'=1&type=boardgame,boardgameexpansion&stats=1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from helpers import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function helpers.instantiate_games.<locals>.<lambda>()>,\n",
+       "            {'id': 1,\n",
+       "             'name': 'Die Macher',\n",
+       "             'description': 'Die Macher is a game about seven sequential political races in different regions of Germany. Players are in charge of national political parties, and must manage limited resources to help their party to victory. The winning party will have the most victory points after all the regional elections. There are four different ways of scoring victory points. First, each regional election can supply one to eighty victory points, depending on the size of the region and how well your party does in it. Second, if a party wins a regional election and has some media influence in the region, then the party will receive some media-control victory points. Third, each party has a national party membership which will grow as the game progresses and this will supply a fair number of victory points. Lastly, parties score some victory points if their party platform matches the national opinions at the end of the game.&#10;&#10;The 1986 edition featured four parties from the old West Germany and supported 3-4 players. The 1997 edition supports up to five players in the re-united Germany and updated several features of the rules as well.  The 2006 edition also supports up to five players and adds a shorter five-round variant and additional rules updates by the original designer.&#10;&#10;',\n",
+       "             'ratingscount': '4819',\n",
+       "             'avgrating': '7.17548',\n",
+       "             'published': 1986,\n",
+       "             'minplayers': 3,\n",
+       "             'maxplayers': 5,\n",
+       "             'best': 5,\n",
+       "             'recommended': 4,\n",
+       "             'not_recommended': 2,\n",
+       "             'suggestedage': 14,\n",
+       "             'language_dependence': 1,\n",
+       "             'playingtime': 240,\n",
+       "             'minplaytime': 240,\n",
+       "             'maxplaytime': 240,\n",
+       "             'minage': 14,\n",
+       "             'designer': 'Karl-Heinz Schmiel',\n",
+       "             'publisher': 'Hans im Glück'})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "instantiate_games(req)"
    ]
   },
   {
@@ -1867,7 +1895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
