--- a/json-mvp.ipynb
+++ b/json-mvp.ipynb
@@ -25,14 +25,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "engine = create_engine('sqlite:///boardgames.db')\n",
-    "Session = sessionmaker(bind=engine, autoflush=False)\n",
-    "session = Session()"
+    "engine = create_engine('sqlite:///boardgames.db')\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Data Things"
    ]
@@ -40,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def game_to_json(o):\n",
@@ -63,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def populate_dummies(json_data, secondary):\n",
@@ -90,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def read_csv(file):\n",
@@ -100,13 +106,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Getting Dummies\n",
     "\n",
@@ -121,6 +131,7 @@
    "cell_type": "code",
    "execution_count": 113,
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -347,6 +358,7 @@
    "cell_type": "code",
    "execution_count": 117,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -565,42 +577,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### cleaning the games data to put in a full sql database"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eng = create_engine('sqlite:///data/boardgames.db', echo=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 230,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_sql_query(\"SELECT * FROM games\", engine).drop('image', axis=1)\n",
     "unscaled_full = df.merge(m, on = 'id').merge(c, on = 'id')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -616,21 +619,23 @@
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler, RobustScaler\n",
-    "from sklearn.neighbors import NearestNeighbors"
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "\n",
+    "eng = create_engine('sqlite:///data/boardgames.db', echo=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw = pd.read_sql_query(\"SELECT * FROM boardgames\", eng).drop('index', axis=1)"
+    "raw = pd.read_sql_query(\"SELECT * FROM boardgames\", eng).drop(['index', 'designer', 'publisher'], axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,33 +661,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nn = NearestNeighbors(n_neighbors=5)"
+    "def dropcols(df):\n",
+    "    to_drop = ['id', 'name', 'description', 'avgrating']\n",
+    "    return df.drop(to_drop, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nn = NearestNeighbors(n_neighbors=5)\n",
+    "nn.fit(dropcols(preprocess(raw)))\n",
+    "\n",
+    "pickle.dump(nn, open('0827test.p', 'wb'))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_test_array(df, ids):\n",
+    "    processed = preprocess(df)\n",
+    "    inputs = dropcols(processed[processed['id'].isin(ids)])\n",
+    "    return inputs.mean().values.reshape(1, -1)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_nearest(df, ids, n=5):\n",
+    "    input_array = get_test_array(df, ids)\n",
+    "    nearest = nn.kneighbors(input_array, n)[-1]\n",
+    "    results = nearest.tolist()[0]\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_games(df, ids):\n",
+    "    return df.iloc[ids, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 325,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = [1, 2, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 326,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>description</th>\n",
+       "      <th>ratingscount</th>\n",
+       "      <th>avgrating</th>\n",
+       "      <th>published</th>\n",
+       "      <th>minplayers</th>\n",
+       "      <th>maxplayers</th>\n",
+       "      <th>best</th>\n",
+       "      <th>recommended</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Adventure</th>\n",
+       "      <th>Puzzle</th>\n",
+       "      <th>Novel-based</th>\n",
+       "      <th>Humor</th>\n",
+       "      <th>Real-time</th>\n",
+       "      <th>Racing</th>\n",
+       "      <th>Fantasy</th>\n",
+       "      <th>Print &amp; Play</th>\n",
+       "      <th>Exploration</th>\n",
+       "      <th>Dice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Dragonmaster</td>\n",
+       "      <td>Dragonmaster is a trick-taking card game based...</td>\n",
+       "      <td>1.290221</td>\n",
+       "      <td>1.411643</td>\n",
+       "      <td>-1.647059</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Samurai</td>\n",
+       "      <td>Part of the Knizia tile-laying trilogy, Samura...</td>\n",
+       "      <td>42.643533</td>\n",
+       "      <td>9.018398</td>\n",
+       "      <td>-0.647059</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Tal der Könige</td>\n",
+       "      <td>When you see the triangular box and the luxuri...</td>\n",
+       "      <td>0.659306</td>\n",
+       "      <td>0.858915</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 112 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id            name                                        description  \\\n",
+       "1   2    Dragonmaster  Dragonmaster is a trick-taking card game based...   \n",
+       "2   3         Samurai  Part of the Knizia tile-laying trilogy, Samura...   \n",
+       "3   4  Tal der Könige  When you see the triangular box and the luxuri...   \n",
+       "\n",
+       "   ratingscount  avgrating  published  minplayers  maxplayers  best  \\\n",
+       "1      1.290221   1.411643  -1.647059         0.3         0.0   0.5   \n",
+       "2     42.643533   9.018398  -0.647059         0.2         0.0   0.0   \n",
+       "3      0.659306   0.858915  -1.000000         0.2         0.0   0.0   \n",
+       "\n",
+       "   recommended  ...  Adventure  Puzzle  Novel-based  Humor  Real-time  Racing  \\\n",
+       "1          1.0  ...          0       0            0      0          0       0   \n",
+       "2          0.0  ...          0       0            0      0          0       0   \n",
+       "3          2.0  ...          0       0            0      0          0       0   \n",
+       "\n",
+       "   Fantasy  Print & Play  Exploration  Dice  \n",
+       "1        1             0            0     0  \n",
+       "2        0             0            0     0  \n",
+       "3        0             0            0     0  \n",
+       "\n",
+       "[3 rows x 112 columns]"
+      ]
+     },
+     "execution_count": 326,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_games(raw, test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8608, 12009, 1046, 412, 9381]"
+      ]
+     },
+     "execution_count": 330,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_nearest(raw, test, n=5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1228,28 +1452,6 @@
     "n = 67\n",
     "test = fullX[fullX['id'] == n]\n",
     "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.7318612 ,  0.58104024, -2.05882353,  0.2       ,  0.        ,\n",
-       "        -0.5       ,  0.        ,  0.        ,  1.25      ,  2.25      ,\n",
-       "         1.25      ,  0.4       ,  0.5       ,  0.        ]])"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.values.reshape(1, -1)"
    ]
   },
   {
