--- a/json-mvp.ipynb
+++ b/json-mvp.ipynb
@@ -607,7 +607,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Data Processing Pipeline"
    ]
@@ -615,7 +617,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler, RobustScaler\n",
@@ -627,7 +631,9 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "raw = pd.read_sql_query(\"SELECT * FROM boardgames\", eng).drop(['index', 'designer', 'publisher'], axis=1)\n"
@@ -636,7 +642,9 @@
   {
    "cell_type": "code",
    "execution_count": 279,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def preprocess(df):\n",
@@ -662,7 +670,9 @@
   {
    "cell_type": "code",
    "execution_count": 280,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def dropcols(df):\n",
@@ -673,7 +683,9 @@
   {
    "cell_type": "code",
    "execution_count": 329,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "nn = NearestNeighbors(n_neighbors=5)\n",
@@ -685,7 +697,9 @@
   {
    "cell_type": "code",
    "execution_count": 302,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def get_test_array(df, ids):\n",
@@ -697,7 +711,9 @@
   {
    "cell_type": "code",
    "execution_count": 323,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def get_nearest(df, ids, n=5):\n",
@@ -710,7 +726,9 @@
   {
    "cell_type": "code",
    "execution_count": 324,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def find_games(df, ids):\n",
@@ -720,7 +738,9 @@
   {
    "cell_type": "code",
    "execution_count": 325,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "test = [1, 2, 3]"
@@ -729,7 +749,9 @@
   {
    "cell_type": "code",
    "execution_count": 326,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -890,6 +912,7 @@
    "cell_type": "code",
    "execution_count": 330,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -910,7 +933,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## MVP lol"
    ]
@@ -919,6 +944,7 @@
    "cell_type": "code",
    "execution_count": 152,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -937,6 +963,7 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -962,7 +989,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1205,7 +1234,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "mca.MCA(df,cols=['artist','mechanics','category'])"
@@ -1215,6 +1246,7 @@
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1239,7 +1271,9 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1262,7 +1296,9 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "nn.fit(X.values)\n",
@@ -1272,7 +1308,9 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "loaded_model = pickle.load(open('testnn.p', 'rb'))"
@@ -1281,7 +1319,9 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1367,7 +1407,9 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1457,7 +1499,9 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1477,7 +1521,9 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1655,7 +1701,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1833,7 +1881,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
