--- a/imageurl-scrape.ipynb
+++ b/imageurl-scrape.ipynb
@@ -125,17 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data.json', 'w') as f:\n",
+    "with open('boardgames.json', 'w') as f:\n",
     "    json.dump(game_json, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 417,
    "metadata": {
     "scrolled": true
    },
@@ -144,24 +144,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "279644 done\n",
-      "280789 done\n"
+      "579 no image\n",
+      "1154 no image\n",
+      "1180 no image\n",
+      "1369 no image\n",
+      "1798 no image\n",
+      "1801 no image\n",
+      "1809 no image\n",
+      "1828 no image\n",
+      "18422 no image\n",
+      "28553 no image\n",
+      "190115 no image\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "([], 0)"
-      ]
-     },
-     "execution_count": 412,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "no_img = []\n",
-    "for g in game_json[17500:]:\n",
+    "\n",
+    "for g in game_json:\n",
     "    if g['image'] == None:\n",
     "        i = g['id']\n",
     "        url = f'https://boardgamegeek.com/xmlapi2/thing?id={i}&type=boardgame&stats=1'\n",
@@ -173,8 +172,7 @@
     "            print(i, 'done')\n",
     "        else:\n",
     "            no_img.append(i)\n",
-    "            print(i, 'no image')\n",
-    "no_img, len(no_img)"
+    "            print(i, 'no image')\n"
    ]
   },
   {
