Add weighted notebook

--- a/WeightedNeighbors.ipynb
+++ b/WeightedNeighbors.ipynb
@@ -132,6 +132,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    17575.000000\n",
+       "mean         0.652484\n",
+       "std          0.092524\n",
+       "min          0.000000\n",
+       "25%          0.640695\n",
+       "50%          0.645855\n",
+       "75%          0.662628\n",
+       "max          1.000000\n",
+       "Name: avgrating, dtype: float64"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "processed.avgrating.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -258,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,14 +301,16 @@
     "        neighborhood = list(zip(dists,neighbors))\n",
     "        # Scale distances by inverse of avgrating\n",
     "        weights = processed.query('id == @neighbors')[['id','avgrating']]\n",
+    "        print(weights)\n",
+    "        print(neighbors)\n",
     "        if mechanics:\n",
     "            # Prefer games with matching mechanics\n",
     "            mech_games = filter_mechanics(mechanics)\n",
-    "            weights.apply(lambda x: x['avgrating']/50 if x['id'] in mech_games else x['avgrating'],axis=1)\n",
-    "        neighborhood = [(resident[0]/(2-weight),resident[1]) for resident, weight in list(zip(neighborhood, weights.avgrating))]\n",
+    "            weights.apply(lambda x: x['avgrating']*10 if x['id'] in mech_games else x['avgrating'],axis=1)\n",
+    "#         neighborhood = [(resident[0]/(weight+1),resident[1]) for resident, weight in list(zip(neighborhood, weights.avgrating))]\n",
     "        # Sort results by new scaled distance\n",
     "        print(neighborhood)\n",
-    "        neighbors = [results[1] for results in sorted([(resident[0]/weight, resident[1]) for resident, weight in list(zip(list(zip(dists,neighbors)),weights.avgrating))],key=lambda x: x[0])]\n",
+    "        neighbors = [results[1] for results in sorted([(resident[0]/(weight.query('id==@resident[1]').avgrating+.01), resident[1]) for resident, weight in list(zip(list(zip(dists,neighbors)),weights))],key=lambda x: x[0])]\n",
     "        print(neighbors)\n",
     "    # Return results not in the given names\n",
     "    return list(filter(lambda g: g['id'] in neighbors and g['name'] not in names, game_json))[:5]\n"
@@ -288,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 167,
    "metadata": {
     "scrolled": false
    },
@@ -297,87 +327,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(3.51543232602219, 8226), (3.264296235985146, 9523), (19.413417328799195, 4797), (28.280981434124207, 7777), (29.514575301353194, 2356), (34.80094644169149, 8689), (36.13703345762666, 7726)]\n",
-      "[8226, 9523, 4797, 7777, 2356, 7726, 8689]\n"
+      "        id  avgrating\n",
+      "11      12   0.851999\n",
+      "612    709   0.643287\n",
+      "1751  2110   0.638605\n",
+      "1927  2356   0.630587\n",
+      "3206  4797   0.637938\n",
+      "4626  8689   0.594629\n",
+      "4878  9577   0.645191\n",
+      "[8226, 9523, 4797, 7777, 2356, 8689, 7726, 709, 12, 14026, 2110, 9577]\n",
+      "[(4.03571837071512, 8226), (4.428712295993859, 9523), (26.429322888696664, 4797), (38.72834436778695, 7777), (40.20068702707624, 2356), (48.90822739893822, 8689), (48.9587794763071, 7726), (52.732089463910576, 709), (53.62922325889055, 12), (53.629223258890576, 14026), (60.62211086317115, 2110), (64.11773689676143, 9577)]\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "[{'id': 2356,\n",
-       "  'language_dependence': 4,\n",
-       "  'best': 1,\n",
-       "  'name': 'Scrabble Sentence Cube Game',\n",
-       "  'designer': None,\n",
-       "  'recommended': 1,\n",
-       "  'description': 'Players in turn roll the 21 word cubes, set the timer and form sentences with the words appearing on the tops of the cubes in a crossword puzzle-like fashion (one word may be part of two sentences - one running vertically and one running horizontally). Turns end when the egg timer runs out. Players score 50 points for each sentence of 7 words or more. All other sentences score the square of the number of words in the sentence (i.e. a 4-word sentence scores 4 X 4, or 16 points). A bonus of 50 points is awarded if all 21 cubes are used. Two points are deducted for each unused cube.&#10;&#10;The 1983 version of the game seems to differ in the number of cubes.  The rules on the inside of the box lid still have a 1971 copyright date, but among other differences, they state that the game contains 27 cubes.  Two of the new cubes are marked with stars on all six sides, making them wild.  From the 1983 rules: &quot;When playing a wild cube, a player must state what word it represents, after which it cannot be changed during that turn.&quot;&#10;&#10;The 1988 version has 24 cubes - two of which are the starred wild dice. The box states that this is the 2nd edition of the game from Coleco Games. Selchow &amp; Righter is credited in the directions as a subsidiary of Coleco Industries, Inc. The majority of the outer box is blue.&#10;&#10;',\n",
-       "  'publisher': None,\n",
-       "  'not_recommended': 1,\n",
-       "  'ratingscount': 124,\n",
-       "  'image': None,\n",
-       "  'playingtime': 10,\n",
-       "  'avgrating': 5.42243,\n",
-       "  'minplaytime': 10,\n",
-       "  'published': 1971,\n",
-       "  'maxplaytime': 10,\n",
-       "  'minplayers': 0,\n",
-       "  'minage': 10,\n",
-       "  'maxplayers': 0,\n",
-       "  'suggestedage': 8,\n",
-       "  'mechanics': ['Dice Rolling'],\n",
-       "  'categories': ['Dice', 'Word Game'],\n",
-       "  'artists': []},\n",
-       " {'id': 4797,\n",
-       "  'language_dependence': None,\n",
-       "  'best': 4,\n",
-       "  'name': 'Guinness Game of World Records',\n",
-       "  'designer': None,\n",
-       "  'recommended': 3,\n",
-       "  'description': 'Players move around the board and score points for successfully completing dexterity challenges and / or correctly answering questions about things contained within the Guinness Book of World Records.  The dexterity challenges are things like: picking up a string of plastic pieces by only touching the end pieces, bouncing balls into a cup, flicking discs into a goal, etc.&#10;&#10;',\n",
-       "  'publisher': None,\n",
-       "  'not_recommended': 1,\n",
-       "  'ratingscount': 52,\n",
-       "  'image': None,\n",
-       "  'playingtime': 45,\n",
-       "  'avgrating': 5.48564,\n",
-       "  'minplaytime': 45,\n",
-       "  'published': 1975,\n",
-       "  'maxplaytime': 45,\n",
-       "  'minplayers': 2,\n",
-       "  'minage': 10,\n",
-       "  'maxplayers': 6,\n",
-       "  'suggestedage': None,\n",
-       "  'mechanics': [],\n",
-       "  'categories': ['Trivia'],\n",
-       "  'artists': []},\n",
-       " {'id': 8689,\n",
-       "  'language_dependence': 1,\n",
-       "  'best': 2,\n",
-       "  'name': 'Bunco',\n",
-       "  'designer': None,\n",
-       "  'recommended': 3,\n",
-       "  'description': \"Players ring the bell each time a &quot;Bunco&quot; is rolled or when a player reaches &quot;21.&quot; The object of the game is to have the highest score at the end of six rounds of play.&#10;&#10;Definition of Bunco: A three-of-a-kind of the number that corresponds to the round (three &quot;1's&quot; in Round One, three &quot;2's&quot; in Round Two and so on.) This is often called a &quot;true&quot; Bunco. A true Bunco immediately ends the round and scores 21 points.&#10;&#10;Bunco contains 9 dice (3 of each color). Bunco Party, with 12 dice, is a separate entry.&#10;&#10;\",\n",
-       "  'publisher': None,\n",
-       "  'not_recommended': 1,\n",
-       "  'ratingscount': 237,\n",
-       "  'image': None,\n",
-       "  'playingtime': 45,\n",
-       "  'avgrating': 5.11323,\n",
-       "  'minplaytime': 45,\n",
-       "  'published': 1855,\n",
-       "  'maxplaytime': 45,\n",
-       "  'minplayers': 2,\n",
-       "  'minage': 8,\n",
-       "  'maxplayers': 12,\n",
-       "  'suggestedage': 4,\n",
-       "  'mechanics': ['Dice Rolling', 'Partnerships'],\n",
-       "  'categories': ['Dice', 'Party Game'],\n",
-       "  'artists': []}]"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'float' object has no attribute 'query'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-167-846c432e2d05>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_nearest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Catan'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Codenames'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-166-71248a196a93>\u001b[0m in \u001b[0;36mget_nearest\u001b[0;34m(names, mechanics, n)\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;31m# Sort results by new scaled distance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighborhood\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0mneighbors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mresults\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'id==@resident[1]'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mavgrating\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m.01\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mresident\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdists\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mneighbors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mavgrating\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighbors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;31m# Return results not in the given names\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-166-71248a196a93>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;31m# Sort results by new scaled distance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighborhood\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0mneighbors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mresults\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'id==@resident[1]'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mavgrating\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m.01\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mresident\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdists\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mneighbors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mavgrating\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighbors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;31m# Return results not in the given names\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'float' object has no attribute 'query'"
+     ]
     }
    ],
    "source": [
